force-app/main/default/objects/Escalation__c/fields/Support_Rep__c.field-meta.xml
<CustomField>
    <fullName>Support_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify support rep assigned to this customer</description>
    <inlineHelpText>Identify support rep assigned to this customer</inlineHelpText>
    <label>Support Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations5</relationshipName>
    <type>Lookup</type>
</CustomField>