force-app/main/default/objects/Escalation__c/fields/Support_Rep_Manager__c.field-meta.xml
<CustomField>
    <fullName>Support_Rep_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify manager of the support rep assigned to this customer</description>
    <inlineHelpText>Identify manager of the support rep assigned to this customer</inlineHelpText>
    <label>Support Rep Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations6</relationshipName>
    <type>Lookup</type>
</CustomField>