force-app/main/default/objects/Escalation__c/fields/Support_VP__c.field-meta.xml
<CustomField>
    <fullName>Support_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify VP of Support for Alert purposes. This field can be autopopulated if the same person.</description>
    <inlineHelpText>Identify VP of Services for Alert purposes.</inlineHelpText>
    <label>Support VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EscalationsDkdp</relationshipName>
    <type>Lookup</type>
</CustomField>