force-app/main/default/objects/Escalation__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <description>Select factors contributing to the issue and drive creation of this Escalation record. Help to guide the assignment of Escalation team and define Action Plan.</description>
    <inlineHelpText>Select factors contributing to the issue</inlineHelpText>
    <label>Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Issue</fullName>
            </value>
            <value>
                <fullName>Competitive Threat</fullName>
            </value>
            <value>
                <fullName>Customer Sat / Value Perception</fullName>
            </value>
            <value>
                <fullName>Customer Sponsorship</fullName>
            </value>
            <value>
                <fullName>Features / Solution Issue</fullName>
            </value>
            <value>
                <fullName>Financial / Budgetary</fullName>
            </value>
            <value>
                <fullName>Implementation Issue</fullName>
            </value>
            <value>
                <fullName>Merger / Acquisition</fullName>
            </value>
            <value>
                <fullName>Partner Issue</fullName>
            </value>
            <value>
                <fullName>Regulatory / Compliance Issue</fullName>
            </value>
            <value>
                <fullName>Sales Issue</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>