force-app/main/default/objects/Escalation__c/fields/Target_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_End_Date__c</fullName>
    <description>Date when the account is projected to be moved out of Red status. Not necessarily the same as the actual End Date.</description>
    <inlineHelpText>Set to Date when the issue is projected to be resolved</inlineHelpText>
    <label>Target End Date</label>
    <type>Date</type>
</CustomField>