force-app/main/default/objects/Escalation__c/fields/Watchlist_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Watchlist_End_Date__c</fullName>
    <inlineHelpText>Current Watchlist End Date for the #Total Days Watchlist formula</inlineHelpText>
    <label>Watchlist End Date</label>
    <type>Date</type>
</CustomField>