force-app/main/default/objects/Escalation__c/fields/Watchlist_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Watchlist_Start_Date__c</fullName>
    <inlineHelpText>Current Watchlist Start Date for the #Total Days Watchlist formula.</inlineHelpText>
    <label>Watchlist Start Date</label>
    <type>Date</type>
</CustomField>