force-app/main/default/objects/Escalation__c/recordTypes/Escalation.recordType-meta.xml
<RecordType>
    <fullName>Escalation</fullName>
    <active>true</active>
    <description>Use for standard (core) escalations</description>
    <label>Escalation</label>
</RecordType>