force-app/main/default/objects/Escalation__c/recordTypes/Executive_Outreach.recordType-meta.xml
<RecordType>
    <fullName>Executive_Outreach</fullName>
    <active>true</active>
    <description>Use when there is an escalation, and a customer has requested an executive outreach.</description>
    <label>Executive Outreach</label>
</RecordType>