force-app/main/default/objects/Escalation__c/validationRules/Reason_Closed_required_if_not_Open.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Closed_required_if_not_Open</fullName>
    <active>true</active>
    <description>If Stage is not Open, Reason Closed required</description>
    <errorConditionFormula>AND ( 
ISPICKVAL(  Status__c  , &quot;Resolved&quot;) || ISPICKVAL(  Status__c , &quot;Lost&quot;), 
ISBLANK(  Reason_Closed__c ))</errorConditionFormula>
    <errorDisplayField>Reason_Closed__c</errorDisplayField>
    <errorMessage>If Stage is Resolved or Lost, Reason Closed is required</errorMessage>
</ValidationRule>