force-app/main/default/objects/Escalation__c/validationRules/Reason_Watchlist_required_if_Watchlist.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Watchlist_required_if_Watchlist</fullName>
    <active>true</active>
    <description>If Stage is Watchlist, Reason Watchlist is required</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Status__c  ,&quot;Watchlist&quot;) &amp;&amp; ISBLANK(  Reason_De_Escalated__c  ))</errorConditionFormula>
    <errorDisplayField>Reason_De_Escalated__c</errorDisplayField>
    <errorMessage>If Stage is Watchlist, Reason Watchlist is required</errorMessage>
</ValidationRule>