force-app/main/default/objects/Escalation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EscalatedAccount__c</columns>
    <columns>Executive_Summary__c</columns>
    <columns>Escalation_Start_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>